--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -18,6 +18,13 @@
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false"/>
 
+        <TextView
+            android:id="@+id/tv_loading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="TextView" />
+
     </LinearLayout>
 
 </ScrollView>
