--- a/app/src/main/res/layout/activity_buatpesanan.xml
+++ b/app/src/main/res/layout/activity_buatpesanan.xml
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="TextView"
+        android:text="0"
         android:textColor="#3F51B5"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_pesan_masker"
@@ -106,6 +106,7 @@
         android:hint="Masukkan Jumlah "
         android:inputType="number"
         android:textColorHint="#B6B6B6"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,6 +128,7 @@
         android:layout_height="57dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:onClick="PesanOnClick"
         android:text="Pesan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_jumlah_anak" />
@@ -150,5 +152,15 @@
         android:textColor="#3F51B5"
         app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toBottomOf="@+id/et_jumlah_dewasa" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Rp. "
+        android:textColor="#3F51B5"
+        app:layout_constraintEnd_toStartOf="@+id/tv_total_harga"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
