--- a/app/src/main/res/layout/activity_buatpesanan.xml
+++ b/app/src/main/res/layout/activity_buatpesanan.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="/Masker"
+        android:textColor="#3F51B5"
+        app:layout_constraintStart_toEndOf="@+id/tv_harga_anak"
+        app:layout_constraintTop_toBottomOf="@+id/et_jumlah_dewasa" />
+
+    <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,9 +90,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="TextView"
+        android:text="0"
         android:textColor="#3F51B5"
-        app:layout_constraintStart_toEndOf="@+id/tv_jumlah_stock_dewasa"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/tvNamaApotik" />
 
     <EditText
@@ -117,9 +127,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="TextView"
+        android:text="0"
         android:textColor="#3F51B5"
-        app:layout_constraintStart_toEndOf="@+id/tv_jumlah_stock_anak"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/et_jumlah_dewasa" />
 
     <Button
@@ -138,9 +148,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="TextView"
+        android:text="0"
         android:textColor="#3F51B5"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/tvNamaApotik" />
 
     <TextView
@@ -148,9 +158,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="TextView"
+        android:text="0"
         android:textColor="#3F51B5"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/et_jumlah_dewasa" />
 
     <TextView
@@ -162,5 +172,55 @@
         android:textColor="#3F51B5"
         app:layout_constraintEnd_toStartOf="@+id/tv_total_harga"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Tersedia "
+        android:textColor="#3F51B5"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/et_jumlah_dewasa" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text=" Masker - Rp. "
+        android:textColor="#3F51B5"
+        app:layout_constraintStart_toEndOf="@+id/tv_jumlah_stock_anak"
+        app:layout_constraintTop_toBottomOf="@+id/et_jumlah_dewasa" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="Tersedia "
+        android:textColor="#3F51B5"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/tvNamaApotik" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="TextView"
+        android:textColor="#3F51B5"
+        app:layout_constraintStart_toEndOf="@+id/tv_jumlah_stock_dewasa"
+        app:layout_constraintTop_toBottomOf="@+id/tvNamaApotik" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="/Masker"
+        android:textColor="#3F51B5"
+        app:layout_constraintStart_toEndOf="@+id/tv_harga_dewasa"
+        app:layout_constraintTop_toBottomOf="@+id/tvNamaApotik" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
